# unboxed-ai

./: .env.example  .gitignore  Makefile  ROADMAP.md  WELCOME.ipynb  agents.md  docker-compose.yml  export_nodules_json.py  extract_reports.py  findings_validation.json  generate_findings_report.py  generate_nodule_images.py  history_report.txt  ingest_reports_csv.py  nodules_export.json  orthanc_structure.json  plot_orthanc.py  process_ods.py  process_reports.py  pyproject.toml  rapports_extraits.csv  seg_validation.json  validate_findings.py  workflow.md
assets/: new-reports.ods  processed_reports.csv
examples/: ingest_all_orthanc_studies.py  langchain_mistralai_integration_example.py  orthank_client_example.py  pgvector_ingest_and_retrieve.py
frontend/: front.py  index.html  package-lock.json
frontend.vanilla/: index.html
frontend/src/: App.css  App.jsx  ExperienceCard.jsx  Filters.jsx  MarkdownContent.jsx  NoduleImagesList.jsx  NoduleTimeline.jsx  ReportCard.jsx
src/unboxed_ai/: __init__.py  experiences_api.py  orthanc_pipeline.py  report_generation.py
src/unboxed_ai/lib/: Constants.py  OrthancClient.py  Services.py  __init__.py  dicom_utils.py  langfuse_client.py  vector_store.py
tests/: test_connect_to_orthank.py  test_mistral_call.py  test_orthank.py  test_orthank_lib.py  test_vector_store_service.py
