[project]
name = "unboxed-ai"
version = "0.1.0"
description = "Our take on the unboxed ai hackathon"
authors = [
    { name = "Mathis", email = "maujogue15@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dcm-seg-nodules",
    "dicomweb-client>=0.60.1",
    "langchain>=1.2.10",
    "langchain-mistralai>=1.1.1",
    "langgraph>=1.0.10",
    "numpy>=2.4.2",
    "pydicom>=3.0.1",
    "simpleitk>=2.5.3",
    "SimpleITK",
    "nibabel",
    "monai",
    "opencv-python",
    "scikit-image",
    "dicom2nifti",
    "pynetdicom",
    "pandas",
    "matplotlib",
    "plotly",
    "dotenv>=0.9.9",
]

[project.scripts]
unboxed-ai = "unboxed_ai:test"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
dcm-seg-nodules = { path = "dcm_seg_nodules-1.0.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
